# ChangeLog for app-editors/sxemacs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Jun 2008; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Initial import of sxemacs ebuild. I'm proxying this for Horst Günther
  Burkhardt III, from the sxemacs dev team.
