@@ -1,5 +1,5 @@
 DIST NeXT_XEmacs.tar.gz 39571 RMD160 3c2cedf75e4ece412031b20a15614a78367393f4 SHA1 619912734b1a1fae5115941b904d41beb4765b47 SHA256 35a0d988fd4ee801572639a99798571aa9fad140ddbed1455565ae9d5e0086c7
 DIST sxemacs-22.1.9.tar.gz 9438059 RMD160 051d4aa8d179fe27118f51679a94825d0962ee25 SHA1 ec23f81bf27a60497f407b59da7c0cab126ae641 SHA256 02f86617cc409aef44f6561837ea1da3aa91fc0f7f06e02d04bd3530f4d82e11
-EBUILD sxemacs-22.1.9.ebuild 10901 RMD160 3dc75218be7e05015cf92ee08e4143911fdd2179 SHA1 6be26a1b3363f26d2c1a95b325e1154fdd15bc3d SHA256 140ea166b442aec189b14a1ff690f7cce20e768ccdb2aada973dd10279244694
-MISC ChangeLog 299 RMD160 64f0a1f74d88c846f5bf1205bf355f3c0391bc11 SHA1 3c34dd6ee74a17ce5cb074030391abd9c8b1185e SHA256 62347a1826b666be7f54a3276185bac5596ce8e07870dc9171fc3de6dde908c8
+EBUILD sxemacs-22.1.9.ebuild 10530 RMD160 da1b392c59fbdadd09502b6016a25a441af47c0f SHA1 66450b7a120ee73e40963ea7f645e49669a562c9 SHA256 b9ac3295ac6c19219ace7975ce7010f88a526d4e5f67e836f23c6b08d158a891
+MISC ChangeLog 438 RMD160 579bfaea9aacb70722cc373e45c50a8c92228a1c SHA1 b530ce4feba78b8dafda4899025d76595ddbac16 SHA256 91e8647dc5ead451a7b08e30ab31dbd21679c7ef79c77dbfa75e94eae2823982
 MISC metadata.xml 365 RMD160 596ab334c06c2d7c1bc8b4ba6d24d29562c82d75 SHA1 f9bf09365f9739065d4b4f52b7af47638f16277d SHA256 da449e36c4d0339e88247a8fb361c3793188d2e6f817861f74d5d64b3a61353b
