@@ -6,7 +6,7 @@ AUX xemacs-21.5.28-vcdiff.patch 476 RMD160 1298334c8d309f9054d98ec98bdda6dba494b
 AUX xemacs.desktop 1080 RMD160 9ddca2747abcc4e7a8bb305740942f62daa73ba6 SHA1 6a3a88ea334b510951a15efb126c4fb71a3b8c38 SHA256 a97f2b5f1b85fde16eaf6b00cd3889a0c2777a0e2c1d7d3d2814f752a976b060
 DIST NeXT_XEmacs.tar.gz 39571 RMD160 3c2cedf75e4ece412031b20a15614a78367393f4 SHA1 619912734b1a1fae5115941b904d41beb4765b47 SHA256 35a0d988fd4ee801572639a99798571aa9fad140ddbed1455565ae9d5e0086c7
 DIST xemacs-21.5.28.tar.gz 15310202 RMD160 a225a2da39c22dccbc5d14399d40dadecead5e11 SHA1 6de5f4b4cecac0480dd9ff50170a72f23f36dbac SHA256 588a3970ee44426975cd86026a932ed0e2cf47f597ebcf76d376bbd18638eae2
-EBUILD xemacs-21.5.28-r2.ebuild 7386 RMD160 411544516e4755156719f5a4b2697268d09ac257 SHA1 c46aabcc30bd69a2ba83064ca606d302a8f2ff5b SHA256 88e6d50290ddd103ca9605070a3a491ff57756ff33d933a1af724188e0b72566
-EBUILD xemacs-21.5.28-r3.ebuild 7649 RMD160 0e1413da36c50ba20d1ee1d22b4f519753fd8264 SHA1 3d4dd3f925e539f005d4bef9845121accdfb3ecd SHA256 1651863b5b7e70c713b5edfe75109eaf47ee8c115c75ba2f2713eb4fe5f758b4
-EBUILD xemacs-21.5.28-r4.ebuild 7070 RMD160 62c065b5c903a89b21ec7f2cb0c8116a159c0dc8 SHA1 0b5a29f3470bb3e8afc103b24f92815b6309eba3 SHA256 28378ad056080db5924b7abd6fcb32191096976a93399ae19c735970cce4d704
-MISC ChangeLog 1143 RMD160 e604193ecb2c18bbd3ce98df86b006a5c18a7cae SHA1 24056ae41b0b3653c32c17a7edce387a13900550 SHA256 72fd08ae22d8ef5598802ed7deda19b818a7278d2d1673655f9c5f1f9ca37fb7
+EBUILD xemacs-21.5.28-r2.ebuild 7377 RMD160 78063d82b2499e96bfc5c9c50b414b1b8a0826f7 SHA1 cc0717d38549dd860598e5268ae7a6e7a63b9b32 SHA256 aeabe94d0d8c22ebc6363179e59fcf836ce2dca9ad481c61075d8ab78d57db77
+EBUILD xemacs-21.5.28-r3.ebuild 7640 RMD160 2c2b397085a0d37867b7cda6a9cff47233918c02 SHA1 6770a69836f28537c9dea463fb8b9f107790628a SHA256 0a0dc2f6d1100f8296221619d8b8a5ea750a7ec51ca1cae1adebe75ada63ae77
+EBUILD xemacs-21.5.28-r4.ebuild 7061 RMD160 bd8e16db769d15910665ca5a53df2670207dafc2 SHA1 91258a5f34e6214ae3924c98c8ea157d0e454405 SHA256 327051ed9fc6dd74459f3668b425f47ff8fb67eeec614bd28de187eca0c58833
+MISC ChangeLog 1334 RMD160 7e766de8e4921192c88e5123bfd7cf53ee956cbb SHA1 060bdc3aeccad476c449159ec1c2c0b234f3a09d SHA256 9e560b9a66d4e7b4edbd072b5c863ed93e8060d42e9718b2af720113c76c5b31
