@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Jun 2008; Ulrich Mueller <ulm@gentoo.org> sxemacs-22.1.9.ebuild:
+  Change to new syntax of eselect-emacs and add missing dependency.
+
   08 Jun 2008; Hans de Graaff <graaff@gentoo.org> ChangeLog:
   Initial import of sxemacs ebuild. I'm proxying this for Horst Günther
   Burkhardt III, from the sxemacs dev team.
